--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Document</title>
 </head>
 <body>
+  <p>Rock Paper Scissors</p>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <button id="restartBtn">Restart Game</button>
+  <div id="score">
+    
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
